--- a/module_3/package.json
+++ b/module_3/package.json
@@ -11,7 +11,8 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "axios": "^1.2.5",
+    "axios": "0.27.2",
+    "jest-mock-axios": "^4.7.0-beta4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
